Мелкие правки (настолько не значительны что нет смысла коммитить)